[project]
name = "homey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.44.1",
    "django>=6.0.1",
    "gunicorn>=24.1.1",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
